[REMOVE] Sous-commande "skin all" (fusionnée dans "skin force"/"skin restore"), Section de configuration des skins obsolète && [UPDATE] Commandes "skin force" et "skin restore" acceptant plusieurs joueurs et sélecteurs (@a, @e, @p, @r, @s) ainsi que les joueurs hors-ligne, Messages du système de gestion des skins uniformisés avec le reste du plugin && [ADD] Message d'utilisation détaillé affiché lorsqu'un argument de commande est manquant && [FIX] Commandes à arguments multiples qui ne s'exécutaient jamais (skin force, skin restore, live, confess), Crash lors de l'application d'un skin récupéré par pseudo de joueur